@@ -29,6 +29,6 @@ public class MarkupParser extends ElementParser<Integer> {
         //exit grid block
         parser.nextTag();
 
-        return new Integer(1);
+        return Integer.valueOf(1);
     }
 }
