@@ -19,7 +19,7 @@ public class XPathCeilingFunc extends XPathFuncExpr {
 
     @Override
     public Object evalBody(DataInstance model, EvaluationContext evalContext, Object[] evaluatedArgs) {
-        return new Double(Math.ceil(FunctionUtils.toDouble(evaluatedArgs[0])));
+        return Double.valueOf(Math.ceil(FunctionUtils.toDouble(evaluatedArgs[0])));
     }
 
 }
