@@ -22,7 +22,7 @@ public class XPathCountFunc extends XPathFuncExpr {
     @Override
     public Object evalBody(DataInstance model, EvaluationContext evalContext, Object[] evaluatedArgs) {
         if (evaluatedArgs[0] instanceof XPathNodeset) {
-            return new Double(((XPathNodeset)evaluatedArgs[0]).size());
+            return Double.valueOf(((XPathNodeset)evaluatedArgs[0]).size());
         } else {
             throw new XPathTypeMismatchException("uses an invalid reference inside a count function");
         }
